public/css/style.css
@font-face {
font-family: Montserrat-Light;
font-weight: 200;
src: url("../fonts/Montserrat-Light.otf") format("opentype");
}

html{
	    overflow-x: hidden;
}

body{
	/*max-width: 400px;*/
	/*margin: auto;*/
	font-family: 'Montserrat-Light', Montserrat, Helvetica, Sans-Serif;
	-webkit-font-smoothing: antialiased;
	/*background-image: url(../img/new-menu.png);*/
    /*background-size: 100vw;*/
    /*background-repeat: no-repeat;*/
    padding: 0px;
    margin: 0px;

    background-color: #E6E6E6;
    z-index: -2;
}
/*
img{
	max-width: 100vw;
}*/

p{
	font-size: 17px;
	line-height: 27px;
	margin: 0px;
}

strong{
	font-family: Montserrat, Helvetica, Sans-Serif;
	font-weight: 700;
}

a:-webkit-any-link {
    /*color: #1B53C2;*/
    text-decoration: none;
    cursor: auto;
}

body a:hover{
	opacity: .7;
}


h1{
	font-family: Lora, Georgia, Serif;
	text-align: center;
}

h2{
	font-family: Montserrat, Helvetica, Sans-Serif;
	font-size: 30px;
	font-weight: 700;
	margin: 0px;
	margin-bottom: 5px;
}


/*///////////////////////////////////
///////////////MENU/////////////////
////////////////////////////////////*/

.StickyMenu{
	/*overflow: hidden;*/
	/*position: absolute;*/
	width: 100vw;
	-webkit-backface-visibility:hidden;
	padding: 0;
	text-align: center;
	z-index: 9;

	/*background-color: white;*/
}

#fixed{
	position: fixed;
	 -webkit-backface-visibility:hidden;
	top:0px;
	left:0;
	/*margin-top: -48px;*/
}

/*/////////////////////////////
           TOP NAV     
/////////////////////////////*/

.TopNav {
	color: #1B53C2;
	/*padding-top: 22px;*/
	padding-bottom: 38px;   /*This creates awk spacing on detail page*/
	vertical-align: middle;

	background-color: white;
}

#top-nav-detail-page{
	padding-bottom: 20px;
}

.TopNav a{
	margin: 18px;
	border-bottom: none;
	font-size: 20px;
	text-decoration: none;
	color: #1B53C2;
}

.topnav-links {
	display: inline-block;
	/*max-width: 500px;*/
}

.TopNav-links a{
	float: right;
}

#logo{
	font-family: Lora, Georgia, Serif;
	color: #B3B3B3;
	font-size: 50px;
	position: relative;
	top: 10px;
	/*left: -20px;*/
}

#underline{
	border-bottom: 1px solid #1B53C2;
	padding-bottom: 2px;
}



/*/////////////////////////////
          BOTTOM NAV     
/////////////////////////////*/
.BottomNav{
	width: 100vw;
	border-collapse: collapse; 
	border-spacing: 0;
	max-width: 375px;

	margin-left: auto;
	margin-right: auto;
	left: 0;
	right: 0;
	/*margin-bottom: -26px;*/
	z-index: 50;

	margin-top: -24px;
}

.BottomNav td{
	font-family: Montserrat, Helvetica, Sans-Serif;
	font-size: 13px;
	font-weight: 700;

	text-transform: uppercase;
	letter-spacing: 1px;

	color: #B3B3B3;

	border: 1px solid #B3B3B3;
	background-color: #F2F2F2;
	width: 50vw;
	height: 29px;
	/*padding: 18px;*/
	padding-top: 10px;
	padding-bottom: 8px;
	
	
}

.BottomNav img{
	height: 28px;
}

.BottomNav a {
	width: 100%;
	height: 100%;
	text-decoration: none;
	color: inherit;
}

.TableLink{
	width: 100%;
	height: 100%;
}

.menu-label{
	display: none;
}

@media screen and (min-width: 450px) {
	.TableLink{
	}

	.TableLink img{
		display: inline-block;
		height: 19px;
		margin-bottom: -3px;
	}

	.menu-label{
		display: inline-block;
		text-transform: capitalize;

		letter-spacing: 0px;
		font-size: 20px;
		font-weight: 400;
		/*vertical-align: middle;*/
		margin-left: 8px;
		/*line-height: 30px;*/
	}
}

#selected-nav{
	color: #1B53C2;
	background-color: white;
}

.BottomNav td  {

}

/*///////////////////////////////////
               HOME
////////////////////////////////////*/

.centered-wrapper{
	/*display: inline-block;*/
	margin: 0 auto;
	/*max-width: 375px;*/
	text-align: center;
}

.centered-wrapper a {
	color: #1B53C2;
}

/*iphone 6 and desktop*/
.gallerySlideshow{
	text-align: center;
	margin-top: -61px;
	vertical-align: middle;
	/*height: 300px;*/
	/*padding: 50px;*/
	position: relative;

	margin-top: auto;
	margin-bottom: auto;
	top: 0;
	bottom: 0;

	/*border: 1px solid blue;*/
	margin-top: 13vh;
}

.gallerySlideshow img{
	margin-right: 400px;

	transform: scale(0.9, 0.9);
	-ms-transform: scale(0.9, 0.9);
	-webkit-transform: scale(0.9, 0.9);

	/*border: 1px solid blue;*/

	margin-top: auto;
	margin-bottom: auto;
	top: 0;
	bottom: 0;
}

/*iphone 5*/
@media screen and (max-width: 374px) {
	.gallerySlideshow{
		margin-top: 5px;
	}

	.gallerySlideshow img{
	transform: scale(0.5, 0.5);
	-ms-transform: scale(0.5, 0.5);
	-webkit-transform: scale(0.5, 0.5);
	}

}

/*desktop*/
@media screen and (min-width: 1000px) {
	.gallerySlideshow img{
		transform: scale(1, 1);
		-ms-transform: scale(1, 1);
		-webkit-transform: scale(1, 1);
	}

	.gallerySlideshow{
		margin-top: 15vh;
	}

}

#marquee-right {
	display: absolute;
	margin-bottom: -432px;
	/*-webkit-marquee-speed: fast;*/

	position: absolute;
	top: 0px;
	left: 0px;
	width: 100vw;

	vertical-align: middle;

	/*border: 2px solid red;*/

}

#marquee-left {
	
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100vw;

	vertical-align: middle;

	/*border: 1px solid blue;*/
}

.intro-text{
	max-width: 340px;

	margin-left: auto;
	margin-right: auto;
	left: 0;
	right: 0;

	position: absolute;
	bottom: 50px;
}

/*AN EDUCATIONAL TOOL FOR CULTIVATING THE ART OF SERENDIPITY*/
h4{
	font-family: Montserrat, Helvetica, Sans-Serif;
	font-weight: 700;
	text-align: center;
	text-transform: uppercase;
	letter-spacing: 1px;
	font-size: 13px;
	font-weight: 700;
	line-height: 20px;

	padding: 10px;

}

.button {
    font-family: Lora, Georgia, Serif;
    font-size: 26px;
    text-decoration: none;
    text-align: center;

    color: #1B53C2;
    background-color: white;
    border: solid #1B53C2 2px;
    padding: 16px 32px;
    
    display: block;
    margin: 10px;
    max-width: 300px;

    margin-left: auto;
	margin-right: auto;
	left: 0;
	right: 0;
}

.button a{
	border: solid #1B53C2
}

.button:active{
	background-color: #1B53C2;
	border: solid white 2px;
	color: white;
	opacity: 1;
}
/* ... */

